               when deleting a lot of values
   HBASE-1781  Weird behavior of WildcardColumnTracker.checkColumn(), 
               looks like recursive loop
   HBASE-1949  KeyValue expiration by Time-to-Live during major compaction is
               broken (Gary Helmling via Stack)
   HBASE-1957  Get-s can't set a Filter (Roman Kalyakin via Stack)

  IMPROVEMENTS
   HBASE-1899  Use scanner caching in shell count
   HBASE-1903  Enable DEBUG by default
   HBASE-1918  Don't do DNS resolving in .META. scanner for each row
   HBASE-1921  When the Master's session times out and there's only one, cluster is wedged
   HBASE-1947  If HBase starts/stops often in less than 24 hours, 
               you end up with lots of store files

Release 0.20.1 - Released October 12th, 2009
  INCOMPATIBLE CHANGES
   HBASE-1854  Remove the Region Historian

  BUG FIXES
   HBASE-1824  [stargate] default timestamp should be LATEST_TIMESTAMP
   HBASE-1795  log recovery doesnt reset the max sequence id, new logfiles can
               get tossed as 'duplicates'
   HBASE-1794  recovered log files are not inserted into the storefile map
   HBASE-1740  ICV has a subtle race condition only visible under high load
   HBASE-1808  [stargate] fix how columns are specified for scanners
   HBASE-1828  CompareFilters are broken from client-side
   HBASE-1836  test of indexed hbase broken
   HBASE-1838  [javadoc] Add javadoc to Delete explaining behavior when no
               timestamp provided
   HBASE-1821  Filtering by SingleColumnValueFilter bug
   HBASE-1840  RowLock fails when used with IndexTable
   HBASE-1818  HFile code review and refinement (Schubert Zhang via Stack)
   HBASE-1830  HbaseObjectWritable methods should allow null HBCs
               for when Writable is not Configurable (Stack via jgray)
   HBASE-1847  Delete latest of a null qualifier when non-null qualifiers
               exist throws a RuntimeException 
   HBASE-1853  Each time around the regionserver core loop, we clear the